minikube/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx
  namespace: nginx
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: jenkins.jenkins.local.shinigami.io
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
    - host: echoserver.local.shinigami.io
      http:
        paths:
          - backend:
              serviceName: echoserver
              servicePort: 8080
            path: /
