minikube/ingress/jenkins.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/tls-acme: "true"
  name: jenkins.nginx
  namespace: jenkins
spec:
  tls:
  - hosts:
    - jenkins.jenkins.shinigami.io
  - secretName: jenkins-tls
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: jenkins.jenkins.shinigami.io
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
