minikube/ingress/kube-state-matrics.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/tls-acme: "true"
  name: kube-state-metrics
  namespace: default
spec:
  tls:
  - hosts:
    - kube-state-metrics.kube-system.shinigami.io
  - secretName: tls-cert
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: kube-state-metrics.kube-system.shinigami.io
      http:
        paths:
          - backend:
              serviceName: kindled-duck-kube-state-metrics
              servicePort: 8080
            path: /
