minikube/ingress/kubedash.ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/tls-acme: "true"
  name: dev.kubedash
  namespace: dashboard
spec:
  tls:
  - hosts:
    - kubedash.dev.gcp.k8m.io
  - secretName: dashboard
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: kubedash.dev.gcp.k8m.io
      http:
        paths:
          - backend:
              serviceName: kubedash-kubernetes-dashboard
              servicePort: 443
            path: /
