minikube/ingress/qa.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/tls-acme: "true"
  name: qa.nginx
  namespace: qa
spec:
  tls:
  - hosts:
    - echoserver.qa.shinigami.io
  - secretName: qa
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: echoserver.qa.shinigami.io
      http:
        paths:
          - backend:
              serviceName: echoserver
              servicePort: 8080
            path: /
